--- a/tafaseer_group/03_results/paper.bib
+++ b/tafaseer_group/03_results/paper.bib
@@ -158,7 +158,7 @@
   pages = {784--786}
 }
 
-@book{brannonm.wheeler:prophets:2002,
+@book{wheeler2002,
   location = {{London}},
   title = {Prophets in the {{Quran}}. {{An}} Introduction to the {{Quran}} and {{Muslim}} Exegesis.},
   publisher = {{Continuum}},
@@ -166,10 +166,17 @@
   date = {2002}
 }
 
-@inreference{wikipedia_listofairlinecodes,
-  title = {Liste Des Compagnies Aériennes Par Pays},
+@inreference{wikipedia_alsamarqandi,
+  title = {Shams Al-{{Dīn}} Al-{{Samarqandī}}},
   booktitle = Wikipedia,
+  author = {{The Users of Wikipedia}},
   date = {2011}
+}
+
+@misc{zahoor1998,
+  title = {Al-{{Mawardi}}, 972-1058 {{C}}.{{E}}.},
+  author = {Zahoor, A.},
+  date = {1998-01-15}
 }
 
 
