--- a/tafaseer_group/03_results/paper.rmd
+++ b/tafaseer_group/03_results/paper.rmd
@@ -24,9 +24,7 @@ How has islamic interpretation of the Quran changed over time? Have certain sect
 
 ## 1.1 A note on transliteration
 
-The transliteration system used is that of the German Oriental Society[^dmg_url]. We have tried to be consistent in our transliteration of Arabic words (and sometimes Persian names). For the inconsistencies that remain[^inconsistencies] we ask the reader's digression. As regards diphtongs we have opted towards the variant employing the combination of consonant plus vowel which we feel best evokes a "closer-to-correct" pronounciation in readers not trained in Arabic. Proper names were transliterated starting with capital letters only at the beginning of a sentence or if they are a person's or a place's name. Words that have found their way into English[^englishwords], and which the reader can be assumed to be familiar with, were only transliterated if belonging to a group of other Arabic words.
-
-[^dmg_url]: [http://www.dmg-web.de/](http://www.dmg-web.de/)
+The transliteration system used is that of the German Oriental Society[^dmg]. We have tried to be consistent in our transliteration of Arabic words (and sometimes Persian names). For the inconsistencies that remain[^inconsistencies] we ask the reader's digression. As regards diphtongs we have opted towards the variant employing the combination of consonant plus vowel which we feel best evokes a "closer-to-correct" pronounciation in readers not trained in Arabic. Proper names were transliterated starting with capital letters only at the beginning of a sentence or if they are a person's or a place's name. Words that have found their way into English[^englishwords], and which the reader can be assumed to be familiar with, were only transliterated if belonging to a group of other Arabic words.
 
 [^dmg]: *Deutsche Morgenländische Gesellschaft* in the original. A copy of the latest transliteration rules anno 1969 is available from [http://www.dmg-web.de/pdf/Denkschrift.pdf](http://www.dmg-web.de/pdf/Denkschrift.pdf).
 
@@ -36,7 +34,11 @@ The transliteration system used is that of the German Oriental Society[^dmg_url]
 
 ## 1.2 A technical note regarding this document
 
-The present document was prepared using the `rmarkdown` package and consequently `knitr`'s built-in devices are being used to include the source code relevant to this study in the appendix. Unfortunately, the underlying libraries have not yet evolved to a point where they knows how to properly break-around longer lines as they often appear in source code files. The reader is kindly asked to open the source code files directly from the GitHub repository where they are being kept[^github] if she wishes to read them in detail. Towards that end, the appendix subheadings provide direct links to the respective files displayed beneath them.
+The present document was prepared using the `rmarkdown`[^rmarkdown] package and consequently `knitr`'s[^knitr] built-in devices are being used to include the source code relevant to this study in the appendix. Unfortunately, the underlying libraries have not yet evolved to a point where they know how to properly break-around longer lines as they often appear in source code files. The reader is kindly asked to open the source code files directly from the GitHub repository where they are being kept[^github] if she wishes to read them in detail. Towards that end, the appendix subheadings provide direct links to the respective files displayed beneath them.
+
+[^rmarkdown]: [http://rmarkdown.rstudio.com/](http://rmarkdown.rstudio.com/)
+
+[^knitr]: [http://yihui.name/knitr/](http://yihui.name/knitr/)
 
 [^github]: [https://github.com/islamicate-DH/hw/tree/master/tafaseer_group](https://github.com/islamicate-DH/hw/tree/master/tafaseer_group)
 
@@ -79,7 +81,9 @@ After trying a number of different data formats for working with the corpus, we 
 ```
 \doublespacing
 
-We built a chain of queries first excluding duplicate texts and then any repeated segments. Appendix VI shows the full chain of queries which led to the CSV file that we then imported into a spreadsheet program to continue manually preparing it for network analysis. Because of the way most of the authors structure their commentary on the Quran, we were not able to get word counts for single verses, and so decided to focus on the *suwar* or chapters of the Quran. There is a huge range of *sūra* lengths, with *sūrat al-baqara*, the longest, consisting of 286 verses and *sūrat al-kawṯar*, the shortest, consisting of 3 verses, so looking at how long the commentary was for a specific *sūra* relative to total *tafsīr* length would probably just leave us with something that resembles a list of *sūra*, from longest to shortest. We chose instead to look at length of *tafsīr* commentary divided by the length of the *sūra* it is commenting. We looked at the top twenty-five *suwar* for each *mufassir* and observed that the number of shared *sūra* among the writers of the corpus ranged from twelve to twenty-two. The relationship between the *mufassirūn* was visualized using Gephi[^gephi], a free/open-source program used for social network analysis.
+We built a chain of queries first excluding duplicate texts and then any repeated segments. Appendix VI shows the full chain of queries which led to the CSV file that we then imported into a spreadsheet program to continue manually preparing it for network analysis. Because of the way most of the authors structure their commentary on the Quran, we were not able to get word counts for single verses, and so decided to focus on the *suwar* or chapters of the Quran. There is a huge range of *sūra* lengths, with *sūrat al-baqara*, the longest, consisting of 286 verses and *sūrat al-kawṯar*, the shortest, consisting of 3 verses, so looking at how long the commentary was for a specific *sūra* relative to total *tafsīr* length would probably just leave us with something that resembles a list of *suwar*, from longest to shortest. We chose instead to look at length of *tafsīr* commentary divided by the length of the *sūra* it is commenting. We looked at the top twenty-five *suwar* for each *mufassir* and observed that the number of shared *sūra* among the writers of the corpus ranged from twelve to twenty-two. 
+
+The relationship between the *mufassirūn* was visualized using Gephi[^gephi], a free/open-source program used for social network analysis. Each writer is represented as a "node" on the graph.  An "edge" is a connection between nodes which for our research is a *sūra* from the list of twenty-five that is shared by writers. A connection is weighted for each additional, shared *sūra* so that the connection between writers who share numerous *suwar* is stronger than the connection between those who share few. Gephi has a modularity function that defines sub-networks which we believed could show which of the writers of the corpus were similar in the manner that they gave certain *suwar* more attention. What resulted from the calculation was the clustering of the *mufassirūn* into four groups.
 
 [^gephi]: [https://gephi.org/](https://gephi.org/)
 
@@ -102,23 +106,25 @@ For the second cluster, geography seems to be the unifying factor. Arabic gramma
 
 If there is a latent, unifying factor to the *mufassirūn* of the third cluster, it is not immediately apparent to us. The exegetes were not contemporaneous to one another with *ar-Rāzī* preceding *al-Fayrūzābādī* by two centuries. Geography certainly did not connect the writers. *Abū Ḥayyān* (@ei_abuhayyan) and *al-Qurṭubī* were both born in Muslim Spain and ultimately settled in Egypt (Ruano, n.d.). Al-Khazin lived in Syria which also was briefly the home of Persian-born *al-Fayrūzābādī* who also spent his life in Jerusalem, Mecca, and Yemen (@ei_alfiruzabadi). *ar-Rāzī* lived in what is now Iran and Afghanistan (@mcauliffe1991). In terms of doctrinal leanings, *Abū Ḥayyān* was a traditionalist and admirer of *Ibn Taimīya* (@ei_abuhayyan) while *ar-Rāzī*, though ostensibly a critic of *muʿtazila* theology, is seen to have incorporated heterodox tenets emphasizing reason and *taʾwīl* or figurative reading in Quranic interpretation (Jaffer, 2015). Unfortunately, the inability to obtain reliable word counts at the verse-level (and therefore our inspection at the chapter-level) may have adversely affected the quality of the groupings calculated by Gephi.
 
-The last cluster of our analysis resulted in a predictable grouping of exegetes. The primary characteristic that unified these authors was their choice of school of jurisprudence. Although these exegetes were all from different time periods and, for the most part, varying geographical locations the analogous school of thought when approaching the interpretations of the Quran was similar enough to differentiate this group from the rest of our corpus. Amongst the four authors in this cluster three were from the school of *aš-šāfiʿī* and one from the school of *al-ḥanafī*.
+The last cluster of our analysis resulted in a predictable grouping of exegetes. The primary characteristic that unified these authors was their choice of school of jurisprudence. These exegetes were all from different time periods and, for the most part, varying geographical locations yet still their analogous school of thought when approaching the interpretations of the Quran was similar enough to differentiate this group from the rest of our corpus. Amongst the four authors in this cluster three were from the school of *aš-Šāfiʿī* and one from the school of *al-Ḥanafī*.
 
-*Al-Māwardī* was an islamic jurist born in Basra, Iraq during 364 AH (@ei_almawardi). During his time he was considered a high profile figure appointed with various significant responsibilities, including serving as a diplomat for the caliphate and eventually appointed chief Iman of Baghdad (Zahoor, 1998) . The cities where *al-Māwardī* lived were known to be hubs of the *muʿtazila* school of thought, so some found it peculiar that the chief *qādī* of Baghdad (known hub of *muʿtazila* jurisprudence) was in fact associated with the šāfiʿī school of thought. He was later condemned for his *muʿtazila* sympathies. *Al-Māwardī* was known for his works in islamic legal principles, in fact in 429 AH the caliph *al-Qādir* summoned four jurists from each school of jurisprudence to write a legal epitome (@ei_almawardi). *Al-Māwardī* was chosen to represent the school of šāfiʿī. Amongst the four jurists the Caliph favored *al-Māwardī* and appointed him chief Imam (@ei_almawardi).
+*Al-Māwardī* was an islamic jurist born in Basra, Iraq during 364 AH (@ei_almawardi). During his time he was considered a high profile figure appointed with various significant responsibilities, including serving as a diplomat for the caliphate and eventually appointed chief Imam of Baghdad (@zahoor1998) . The city where *al-Māwardī* lived was known to be a hub of the *muʿtazila* school of thought, so some found it peculiar that the chief Imam of Baghdad (known hub of *muʿtazila* jurisprudence) was in fact associated with the šāfiʿī school of thought. He was later condemned for his *muʿtazila* sympathies. *Al-Māwardī* was known for his works in islamic legal principles, in fact in 429 AH the caliph *al-Qādir* summoned four jurists from each school of jurisprudence to write a legal epitome (@ei_almawardi). *Al-Māwardī* was chosen to represent the school of šāfiʿī. Amongst the four jurists the Caliph favored *al-Māwardī* and appointed him chief Imam (@ei_almawardi).
 
-Along with the school of jurisprudence a common factor amongst most of the authors was their interest in or relation to islamic law.
+Along with school of jurisprudence, a common factor amongst most of the authors was their interest in or relation to islamic law.
 
-3.2 Remarks on noteworthy authors of works in the corpus
+## 3.2 Remarks on noteworthy authors of works in the corpus after network analysis
 
 *ʿIzz ad-Dīn ibn ʿAbd as-Salām* was born in Damascus in the year 577 AH (@salahi2016), long after *as-Samarqandī* and *al-Māwardī*. During his time he was the leading authority in the *šāfiʿī* jurisprudence and most famous for his interpretations of islamic legal principles. Unlike *al-Māwardī*, *ʿAbd as-Salām* was known to be defiant of customs he deemed "unsanctioned". He even went as far as condemning those who follow these unsanctioned customs regardless of status; most notably the ruler of Damascus, aṣ-Ṣāliḥ ʾIsmaʿīl (@jackson1996). This condemning led to his imprisonment and eventual emigration to Cairo, Egypt. In Cairo he was credited as the first jurist to teach Quranic commentary in Egypt (@salahi2016). Like *al-Māwardī*, *as-Salām* was a world renowned scholar of *fatāwa* (sg. fatwa, islamic legal opinion). Indeed, *as-Salām* was so respected, islamic jurists like *al-Ḥāfiẓ al-Munḏirī* stopped giving *fatāwa* stating that "[i]t does not behove any jurist to give a *fatwa* where *ʿIzz ad-Dīn* [*Ibn ʿAbd as-Salām*] happens to be present" (@salahi2016). Both *Ibn ʿAbd as-Salām* and *al-Māwardī* were highly respected scholars of their time especially in regards to islamic law. Both authors were advisors to respected islamic governments of their time (@jackson1996), another factor which may have attributed to the grouping of these authors in the same cluster.
 
 *Ǧalāl ad-Dīn as-Suyūṭī* was born in Cario, Eygpt in the year 849 AH (@eb_alsuyuti) making his work the most recent amongst the cluster. Like most authors in the cluster he was an islamic jurist from the school of *aš-Šāfiʿī*. He was acknowledged as one of the more recent authorities of the *šāfiʿī* school whose degree of *iǧtihād* was accepted by most (@mic_alsuyuti). *As-Suyūṭī* lacked a particular interest in islamic law and was not known to be a head advisor for any islamic governments like both *Ibn ʿAbd as-Salām* and *al-Māwardī*. Although his father being a judge of an islamic state may have influenced any emphasis on (islamic) law within his writings and thus placing him within this cluster (@eb_alsuyuti). Unlike the other authors, *as-Suyūṭī* also studied the *ḥanafī* school of jurisprudence and was tutored by a Sufi, though his work drew primarily from the *šāfiʿī* school of thought. *As-Suyūṭī*'s interest in the *ḥanafī* jurisprudence may account for the inclusion of *as-Samarqandī* in the cluster. 
 
-*Abū al-Layṯ as-Samarqandī*, author of *baḥr al-ʿulūm* was the single author in the cluster from the school of *al-Ḥanafī*. Apart from his jurisprudence another outlying factor for *as-Samarqandī* was his geographical location and time period. He was born in Afghanistan during 373 AH making him the oldest exegete in this cluster (@wheeler2002 [p. 337]). Since his worked dated back so far we were unable to find much information in regards to his lifestyle or any other factors that may have attributed to his placing in this cluster. We were however able to compile a few specific features of his exegesis. In his work on the Quran *as-Samarqandī* was known to relate the stories of *ṣaḥāba* and other *ḥadīṯ* from people not proven to be entirely reliable. He was also known for his lack of interest in the various methods of recitation (*qirāʾāt*; @wikipedia_listofairlinecodes). Unfortunately, due to lack of information on *as-Samarqandī* we were unable to pinpoint a specific factor that attributed to his grouping in this cluster, for now he remains an outlier.
+*Abū al-Layṯ as-Samarqandī*, author of *baḥr al-ʿulūm* was the single author in the cluster from the school of *al-Ḥanafī*. Apart from his jurisprudence another outlying factor for *as-Samarqandī* was his geographical location and time period. He was born in Afghanistan during 373 AH making him the oldest exegete in this cluster (@wheeler2002 [p. 337]). Since his worked dated back so far we were unable to find much information in regards to his lifestyle or any other factors that may have attributed to his placing in this cluster. We were however able to compile a few specific features of his exegesis. In his work on the Quran *as-Samarqandī* was known to relate the stories of *ṣaḥāba* and other *ḥadīṯ* from people not proven to be entirely reliable. He was also known for his lack of interest in the various *qirāʾāt*, the methods of recitation of the Quran (@wikipedia_alsamarqandi)[^weirdness]. Unfortunately, due to lack of information on *as-Samarqandī* we were unable to pinpoint a specific factor that attributed to his grouping in this cluster, for now he remains an outlier.
 
-4 Conclusion
+[^weirdness]: The quoted Wikipedia article does not contain the information on *Abū al-Layṯ as-Samarqandī* stated here. Unfortunately, the originally quoted article could not be found again before conclusion of this paper. May the citation as it stands serve as a starting point as to where the information may be obtained by any who may need to access it. The editor.
 
-From the results of the study, we cannot definitively state that focusing on certain aspects of the Quran is determined principally by any of the factors mentioned at the beginning of the paper (chronology, geography, dogma). However, we believe that examination of *sūra* and *āyā* preference from Quranic exegetes deserves further exploration.
+# 4 Conclusion
+
+From the results of the study, we cannot definitively state that focusing on certain aspects of the Quran is determined principally by any of the factors mentioned at the beginning of the paper (chronology, geography, dogma). It is our contention that examining commentaries that are able to be divided up at the verse-level should yield clearer, more consistent clusters. There was a surprisingly large degree of overlap among the lists of top twenty-five *suwar*. Shorter *suwar* may require more commentary simply because their laconic nature demands contextualizing and therefore their placement at the top of the lists reveals little about the attention *mufassirūn* gave to certain sections of the Quran. What this research did was attempt to explore  a new method of charting the relationship of Quranic scholars that relies on an impartial, distant examination of *tafāsīr* that traditional categorization--according to sect or school of jurisprudence--may lack. The results were not as conclusive as we had hoped, however, we believe that examination of *sūra* and *āyā* preferences of Quranic exegetes deserves further exploration.
 
 # 5 References
 
