--- a/tafaseer_group/03_results/paper.rmd
+++ b/tafaseer_group/03_results/paper.rmd
@@ -70,7 +70,7 @@ The following *tafāsīr* which ended up being the subject of this document are 
 
 # 3 Methodology
 
-Our attempt at determining which verses enjoyed more consideration from the *mufassirūn* began with calculating the word count of every section of the tafsir that was commenting on a specific verse and dividing that number by the total word count of the *tafsīr*. It was our belief that increased attention on a verse was indicative of some sort of importance to the *mufassir*. Importance might not necessarily mean that the *mufassir* had an increased affinity for the values or instructions espoused in the verse. A *mufassir* might have believed that an obscure verse required elucidation to make its message comprehensible to the Muslim layman and therefore devoted more writing to explication and contextualizing.
+Our attempt at determining which verses enjoyed more consideration from the *mufassirūn* began with calculating the word count of every section of the *tafsīr* that was commenting on a specific verse and dividing that number by the total word count of the *tafsīr*. It was our belief that increased attention on a verse was indicative of some sort of importance to the *mufassir*. Importance might not necessarily mean that the *mufassir* had an increased affinity for the values or instructions espoused in the verse. A *mufassir* might have believed that an obscure verse required elucidation to make its message comprehensible to the Muslim layman and therefore devoted more writing to explication and contextualizing.
 
 When we sorted the verses from most written about to least, we observed some suspicious patterns. Consecutive verses were appearing next to one another on the list and they had identical word counts. When we inspected the files in our corpus, we found that there were duplicate chunks of text. The problem was that most of the writers alternated between writing about singles verses and writing about groups of consecutive verses that dealt with a single narrative or theme. If a section of a *tafsīr* covered consecutive verses together, [altafsir.com](altafsir.com) repeated that segment of text when each of those verses were selected on the website. When the script to download the tafāsīr was run, it downloaded the repeated segments of texts and organized them as if they were unique to a single verse. Only three of the writers in the corpus consistently wrote about single verses and therefore did not succumb to the duplicate text problem. Of the 87 *tafsīr* works listed on the website, 69 turned out to be completely empty and one author, *Ibn ʿArafa*, only provided commentary on *sūratān*. Both were removed from the corpus used for analysis, which consequently consists of 17 works comprising $i_{total}=16444304$ words.
 
@@ -81,7 +81,7 @@ After trying a number of different data formats for working with the corpus, we 
 ```
 \doublespacing
 
-We built a chain of queries first excluding duplicate texts and then any repeated segments. Appendix VI shows the full chain of queries which led to the CSV file that we then imported into a spreadsheet program to continue manually preparing it for network analysis. Because of the way most of the authors structure their commentary on the Quran, we were not able to get word counts for single verses, and so decided to focus on the *suwar* or chapters of the Quran. There is a huge range of *sūra* lengths, with *sūrat al-baqara*, the longest, consisting of 286 verses and *sūrat al-kawṯar*, the shortest, consisting of 3 verses, so looking at how long the commentary was for a specific *sūra* relative to total *tafsīr* length would probably just leave us with something that resembles a list of *suwar*, from longest to shortest. We chose instead to look at length of *tafsīr* commentary divided by the length of the *sūra* it is commenting. We looked at the top twenty-five *suwar* for each *mufassir* and observed that the number of shared *sūra* among the writers of the corpus ranged from twelve to twenty-two. 
+We built a chain of queries first excluding duplicate texts and then any repeated segments. Appendix VI shows the full chain of queries which led to the CSV file that we then imported into a spreadsheet program to continue manually preparing it for network analysis. Because of the way most of the authors structure their commentary on the Quran, we were not able to get word counts for single verses, and so decided to focus on the *suwar* or chapters of the Quran. There is a huge range of *sūra* lengths, with *sūrat al-baqara*, the longest, consisting of 286 verses and *sūrat al-kawṯar*, the shortest, consisting of 3 verses, so looking at how long the commentary was for a specific *sūra* relative to total *tafsīr* length would probably just leave us with something that resembles a list of *suwar*, from longest to shortest. We chose instead to look at length of *tafsīr* commentary divided by the length of the *sūra* it is commenting. We looked at the top twenty-five *suwar* for each *mufassir* and observed that the number of shared *sūra* among the writers of the corpus ranged from twelve to twenty-two.
 
 The relationship between the *mufassirūn* was visualized using Gephi[^gephi], a free/open-source program used for social network analysis. Each writer is represented as a "node" on the graph.  An "edge" is a connection between nodes which for our research is a *sūra* from the list of twenty-five that is shared by writers. A connection is weighted for each additional, shared *sūra* so that the connection between writers who share numerous *suwar* is stronger than the connection between those who share few. Gephi has a modularity function that defines sub-networks which we believed could show which of the writers of the corpus were similar in the manner that they gave certain *suwar* more attention. What resulted from the calculation was the clustering of the *mufassirūn* into four groups.
 
@@ -116,7 +116,7 @@ Along with school of jurisprudence, a common factor amongst most of the authors 
 
 *ʿIzz ad-Dīn ibn ʿAbd as-Salām* was born in Damascus in the year 577 AH (@salahi2016), long after *as-Samarqandī* and *al-Māwardī*. During his time he was the leading authority in the *šāfiʿī* jurisprudence and most famous for his interpretations of islamic legal principles. Unlike *al-Māwardī*, *ʿAbd as-Salām* was known to be defiant of customs he deemed "unsanctioned". He even went as far as condemning those who follow these unsanctioned customs regardless of status; most notably the ruler of Damascus, aṣ-Ṣāliḥ ʾIsmaʿīl (@jackson1996). This condemning led to his imprisonment and eventual emigration to Cairo, Egypt. In Cairo he was credited as the first jurist to teach Quranic commentary in Egypt (@salahi2016). Like *al-Māwardī*, *as-Salām* was a world renowned scholar of *fatāwa* (sg. fatwa, islamic legal opinion). Indeed, *as-Salām* was so respected, islamic jurists like *al-Ḥāfiẓ al-Munḏirī* stopped giving *fatāwa* stating that "[i]t does not behove any jurist to give a *fatwa* where *ʿIzz ad-Dīn* [*Ibn ʿAbd as-Salām*] happens to be present" (@salahi2016). Both *Ibn ʿAbd as-Salām* and *al-Māwardī* were highly respected scholars of their time especially in regards to islamic law. Both authors were advisors to respected islamic governments of their time (@jackson1996), another factor which may have attributed to the grouping of these authors in the same cluster.
 
-*Ǧalāl ad-Dīn as-Suyūṭī* was born in Cario, Eygpt in the year 849 AH (@eb_alsuyuti) making his work the most recent amongst the cluster. Like most authors in the cluster he was an islamic jurist from the school of *aš-Šāfiʿī*. He was acknowledged as one of the more recent authorities of the *šāfiʿī* school whose degree of *iǧtihād* was accepted by most (@mic_alsuyuti). *As-Suyūṭī* lacked a particular interest in islamic law and was not known to be a head advisor for any islamic governments like both *Ibn ʿAbd as-Salām* and *al-Māwardī*. Although his father being a judge of an islamic state may have influenced any emphasis on (islamic) law within his writings and thus placing him within this cluster (@eb_alsuyuti). Unlike the other authors, *as-Suyūṭī* also studied the *ḥanafī* school of jurisprudence and was tutored by a Sufi, though his work drew primarily from the *šāfiʿī* school of thought. *As-Suyūṭī*'s interest in the *ḥanafī* jurisprudence may account for the inclusion of *as-Samarqandī* in the cluster. 
+*Ǧalāl ad-Dīn as-Suyūṭī* was born in Cario, Eygpt in the year 849 AH (@eb_alsuyuti) making his work the most recent amongst the cluster. Like most authors in the cluster he was an islamic jurist from the school of *aš-Šāfiʿī*. He was acknowledged as one of the more recent authorities of the *šāfiʿī* school whose degree of *iǧtihād* was accepted by most (@mic_alsuyuti). *As-Suyūṭī* lacked a particular interest in islamic law and was not known to be a head advisor for any islamic governments like both *Ibn ʿAbd as-Salām* and *al-Māwardī*. Although his father being a judge of an islamic state may have influenced any emphasis on (islamic) law within his writings and thus placing him within this cluster (@eb_alsuyuti). Unlike the other authors, *as-Suyūṭī* also studied the *ḥanafī* school of jurisprudence and was tutored by a Sufi, though his work drew primarily from the *šāfiʿī* school of thought. *As-Suyūṭī*'s interest in the *ḥanafī* jurisprudence may account for the inclusion of *as-Samarqandī* in the cluster.
 
 *Abū al-Layṯ as-Samarqandī*, author of *baḥr al-ʿulūm* was the single author in the cluster from the school of *al-Ḥanafī*. Apart from his jurisprudence another outlying factor for *as-Samarqandī* was his geographical location and time period. He was born in Afghanistan during 373 AH making him the oldest exegete in this cluster (@wheeler2002 [p. 337]). Since his worked dated back so far we were unable to find much information in regards to his lifestyle or any other factors that may have attributed to his placing in this cluster. We were however able to compile a few specific features of his exegesis. In his work on the Quran *as-Samarqandī* was known to relate the stories of *ṣaḥāba* and other *ḥadīṯ* from people not proven to be entirely reliable. He was also known for his lack of interest in the various *qirāʾāt*, the methods of recitation of the Quran (@wikipedia_alsamarqandi)[^weirdness]. Unfortunately, due to lack of information on *as-Samarqandī* we were unable to pinpoint a specific factor that attributed to his grouping in this cluster, for now he remains an outlier.
 
